tests/toylang/neg/001667_mutation.toylang
program a = { while a sleep sleep; } .
